--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Roboto:300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../public/css/main.css"/>
+        <link rel="stylesheet" href="/public/css/main.css"/>
     
         <script src="https://kit.fontawesome.com/f8b14333ef.js"></script>
     </head>
@@ -24,7 +24,7 @@
             <!--Logo-->
             <div class="brand">
                 <a href="#hero">
-                    <object class="logo" type="image/svg+xml" data="../public/images/ThermoSecurityLogoHorz.svg"></object>
+                    <object class="logo" type="image/svg+xml" data="/public/images/ThermoSecurityLogoHorz.svg"></object>
                 </a>
             </div>
             <!--Navbar-->
@@ -70,19 +70,19 @@
             <h1 class="hidden">Units</h1>
             <div class="units-grid">
                 <div class="box">
-                    <img src="../public/images/wireless.jpg"/>
+                    <img src="/public/images/wireless.jpg"/>
                     <div class="icon"><i class="fas fa-wifi"></i></div>
                     <h2>100% Wireless</h2>
                     <p>Place it anywhere, in your home, business and even outdoors.</p>
                 </div>
                 <div class="box">
-                    <img src="../public/images/apartment.jpg"/>
+                    <img src="/public/images/apartment.jpg"/>
                     <div class="icon"><i class="fas fa-video"></i></div>
                     <h2>24/7 Recording</h2>
                     <p>Check in from anywhere in the world and at any time for real time updates, viewing, changes and more.</p>
                 </div>
                 <div class="box">
-                    <img src="../public/images/family_computer.jpg"/>
+                    <img src="/public/images/family_computer.jpg"/>
                     <div class="icon"><i class="fas fa-mobile-alt"></i></object></div>
                     <h2>Fully Compatible</h2>
                     <p>ThermoSecurity™ is compatible with almost all other devices in the smart home ecosystem.</p>
@@ -102,7 +102,7 @@
                     <p>Change your home temperature with your smart phone from anywhere.</p>
                 </div>
                 <div class="image-box">
-                    <img src="../public/images/Thermostat.png"/>
+                    <img src="/public/images/Thermostat.png"/>
                 </div>
             </div>
         </section>
@@ -111,7 +111,7 @@
             <h1 class="hidden">Security</h1>
             <div class="security-grid">
                 <div class="image-box">
-                    <img src="../public/images/secure_phone.png"/>
+                    <img src="/public/images/secure_phone.png"/>
                 </div>
                 <div class="text-box">
                     <h1>Feel secure at home</h1>
@@ -125,7 +125,7 @@
             <div class="plans-grid">
                 <div class="box">
                     <h2>Bronze Tier</h2>
-                    <div class="icon"><object class="" type="image/svg+xml" data="../public/images/bronzeshield.svg"></object></div>
+                    <div class="icon"><object class="" type="image/svg+xml" data="/public/images/bronzeshield.svg"></object></div>
                     <ul>
                         <li><p>Enables your device to be connected to the Wifi and accessed by your device.</p></li>
                         <li><p>Supports up to 5 Thermosecure devices.</p></li>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="box">
                     <h2>Silver Tier</h2>
-                    <div class="icon"><object class="" type="image/svg+xml" data="../public/images/silvershield.svg"></object></div>
+                    <div class="icon"><object class="" type="image/svg+xml" data="/public/images/silvershield.svg"></object></div>
                     <ul>
                         <li><p>Bronze Tier benefits</p></li>
                         <li><p>Supports up to 10 Thermosecure devices.</p></li>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="box">
                     <h2>Gold Tier</h2>
-                    <div class="icon"><object class="" type="image/svg+xml" data="../public/images/goldsheild.svg"></object></div>
+                    <div class="icon"><object class="" type="image/svg+xml" data="/public/images/goldsheild.svg"></object></div>
                     <ul>
                         <li><p>Silver Tier benefits</p></li>
                         <li><p>Supports up to 25 Thermosecure devices.</p></li>
@@ -178,6 +178,6 @@
         <footer class="footer">
             <p class="copyright">©HouseCom | All Rights Reserved</p></li>
         </footer>
-        <script src="../js/main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
