--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="https://kit.fontawesome.com/f8b14333ef.js"></script>
     </head>
     <body>
+        <img src="" alt="" id="preload">
         <!--Hidden for accessibility-->
         <h1 class="hidden">Main Body</h1>
         <!--Page Header-->
